--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "numberhaj",
+  "name": "bottemplate",
   "version": "0.0.0",
-  "description": "Based on the concept of [this bot](https://countingbot.com/), DeathCount (also known as  **numberhaj**) is a Discord counting bot that punishes players",
+  "description": "",
   "main": "index.ts",
   "scripts": {
     "dev": "tsx watch src/index.ts",
